# softrend

./: .editorconfig  .gitignore  CMakeLists.txt  SoftwareRasterizer.cpp  SoftwareRasterizer.hpp  main.cpp
gba/: CMakeLists.txt  Makefile
gba/src-gba/: GBAMode3Framebuffer.cpp  GBAMode3Framebuffer.hpp  main.cpp
iOS/SoftRend/: AppDelegate.swift  GameScene.sks  GameScene.swift  GameViewController.swift  SoftRend-Bridging-Header.h  SoftRend-Swift.h  SoftwareRenderer.cpp  SoftwareRenderer.h
iOS/SoftRend.xcodeproj/: project.pbxproj
iOS/SoftRend.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/SoftRend.xcodeproj/project.xcworkspace/xcuserdata/pwootage.xcuserdatad/: UserInterfaceState.xcuserstate
iOS/SoftRend.xcodeproj/xcuserdata/pwootage.xcuserdatad/xcschemes/: xcschememanagement.plist
include/softrend/: ArrayFramebuffer.hpp  Framebuffer.hpp  IndexBuffer.hpp  SoftwareRasterizer.hpp  VertexTypes.hpp
shader/: VertexShader.h
src/: SoftwareRasterizer.cpp  SoftwareRasterizer.hpp  renderTeapot.cpp  renderTeapot.hpp
src/buffers/: ArrayFramebuffer.hpp  ColorTFramebuffer.cpp  ColorTFramebuffer.hpp  Framebuffer.hpp  IndexBuffer.hpp  VertexBuffer.hpp
src/shader/: BasicVertexShader.cpp  BasicVertexShader.hpp  FragmentShader.hpp  PhongFragmentShader.cpp  PhongFragmentShader.hpp  VertexShader.hpp  VertexTypes.hpp
